crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E302_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E30.ipynb:21:1: E302 (blank-lines-top-level) [*] Expected 2 blank lines, found 1
   |
19 |     pass
20 |
21 | def b():
   | ^^^ E302 (blank-lines-top-level)
22 |     pass
23 | # end
   |
   = help: Add missing blank line(s)

ℹ Safe fix
18 18 | def a():
19 19 |     pass
20 20 | 
   21 |+
21 22 | def b():
22 23 |     pass
23 24 | # end
