crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E304_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E30.ipynb:45:1: E304 (blank-line-after-decorator) [*] Blank lines found after function decorator (1)
   |
43 | @decorator
44 |
45 | def function():
   | ^^^ E304 (blank-line-after-decorator)
46 |     pass
47 | # end
   |
   = help: Remove extraneous blank line(s)

ℹ Safe fix
41 41 | # end
42 42 | # E304
43 43 | @decorator
44    |-
45 44 | def function():
46 45 |     pass
47 46 | # end
