crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E305_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E30.ipynb:55:1: E305 (blank-lines-after-function-or-class) [*] Expected 2 blank lines after class or function definition, found (1)
   |
54 |     # another comment
55 | fn()
   | ^^ E305 (blank-lines-after-function-or-class)
56 | # end
57 | # E306:3:5
   |
   = help: Add missing blank line(s)

ℹ Safe fix
52 52 |     # comment
53 53 | 
54 54 |     # another comment
   55 |+
55 56 | fn()
56 57 | # end
57 58 | # E306:3:5
