crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_top_level_isort_compatibility-lines-after(1)-between(1).snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E30_isort.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import json
2 | |
3 | |
4 | |
5 | | from typing import Any, Sequence
  | |________________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1 1 | import json
2 2 | 
3   |-
4   |-
5 3 | from typing import Any, Sequence
6   |-
7 4 | 
8 5 | class MissingCommand(TypeError): ...  # noqa: N818
9 6 | 

E30_isort.py:23:1: E302 (blank-lines-top-level) [*] Expected 2 blank lines, found 1
   |
21 |     abcd.foo()
22 |
23 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...
   | ^^^ E302 (blank-lines-top-level)
24 |
25 | if TYPE_CHECKING:
   |
   = help: Add missing blank line(s)

ℹ Safe fix
20 20 | 
21 21 |     abcd.foo()
22 22 | 
   23 |+
23 24 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...
24 25 | 
25 26 | if TYPE_CHECKING:

E30_isort.py:26:5: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
   |
25 |   if TYPE_CHECKING:
26 | /     import os
27 | |
28 | |
29 | |
30 | |     from typing_extensions import TypeAlias
   | |___________________________________________^ I001 (unsorted-imports)
   |
   = help: Organize imports

ℹ Safe fix
25 25 | if TYPE_CHECKING:
26 26 |     import os
27 27 | 
28    |-
29    |-
30 28 |     from typing_extensions import TypeAlias
31 29 | 
32 30 | 

E30_isort.py:35:1: E302 (blank-lines-top-level) [*] Expected 2 blank lines, found 1
   |
33 |     abcd.foo()
34 |
35 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:
   | ^^^ E302 (blank-lines-top-level)
36 |     ...
   |
   = help: Add missing blank line(s)

ℹ Safe fix
32 32 | 
33 33 |     abcd.foo()
34 34 | 
   35 |+
35 36 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:
36 37 |     ...
37 38 | 

E30_isort.py:41:1: E302 (blank-lines-top-level) [*] Expected 2 blank lines, found 1
   |
39 |     from typing_extensions import TypeAlias
40 |
41 | def __call__2(self, name: str, *args: Any, **kwargs: Any) -> Any:
   | ^^^ E302 (blank-lines-top-level)
42 |     ...
   |
   = help: Add missing blank line(s)

ℹ Safe fix
38 38 | if TYPE_CHECKING:
39 39 |     from typing_extensions import TypeAlias
40 40 | 
   41 |+
41 42 | def __call__2(self, name: str, *args: Any, **kwargs: Any) -> Any:
42 43 |     ...
43 44 |
